odin problem matcher for vscode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,13 +15,21 @@
 				"showReuseMessage": true,
 				"clear": true
 			},
-			"problemMatcher": [
-				"$msCompile"
-			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"problemMatcher": {
+                "owner": "odin",
+                "fileLocation": "absolute",
+                "pattern": {
+                    "regexp": "^(.*)\\((\\d+):(\\d+)\\) (.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "message": 4
+                }
+            }
 		}
 	]
 }
