--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,10 @@
 			"problemMatcher": [
 				"$msCompile"
 			],
-			"group": "build"
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
