We're not building release yet

--- a/.builds/ubuntults.yml
+++ b/.builds/ubuntults.yml
@@ -28,5 +28,5 @@ tasks:
       cd ld55-summoning
       ./build.sh
 artifacts:
-  - ld55-summoning/build/summoning
   - ld55-summoning/build/summoning_debug
+  # - ld55-summoning/build/summoning
